[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pyktok"
version = "0.0.16"
authors = [
  { name="Deen Freelon", email="dfreelon@gmail.com"},
]
description = "A package for collecting TikTok videos and metadata."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "browser-cookie3",
    "beautifulsoup4",
    "pandas",
    "requests",
    "selenium",
    "streamlit",
    "webdriver-manager",
]

[project.urls]
"Homepage" = "https://github.com/dfreelon/pyktok"

[tool.pytest.ini_options]
testpaths = "tests"
