[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyktok"
version = "0.0.30"
authors = [
  { name="Deen Freelon", email="dfreelon@gmail.com"},
]
description = "A package for collecting TikTok videos and metadata."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = ["browser-cookie3",
				"beautifulsoup4",
				"numpy",
				"pandas",
				"playwright==1.37.0; python_version < '3.12'",
				"playwright==1.39.0; python_version >= '3.12'",
				"requests",
				"streamlit",
				"TikTokApi"]

[project.urls]
"Homepage" = "https://github.com/dfreelon/pyktok"
