[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyktok"
version = "0.0.31"
authors = [
  { name="Deen Freelon", email="dfreelon@gmail.com"},
]
description = "A package for collecting TikTok videos and metadata."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = ["beautifulsoup4",
                "browser-cookie3",
		"numpy",
		"pandas",
		"playwright >= 1.50.0",
		"requests",
		"streamlit",
		"TikTokApi >= 7.0.0"]

[project.urls]
"Homepage" = "https://github.com/dfreelon/pyktok"
